### 69

+ Added support for Mists of Pandaria
* Updated TOC


### 68

* Fixed native Debuff not being hidden


### 67

* Fixed call to deprecated function


### 66

* Fixed call to deprecated function


### 65

* Fixed wrong file name for Cataclysm toc file


### 64

* Fix right click not cancelling aura on mouse up (now trigger on down and up)
* Updated some code to latest wow API


### 63

* Fix typo in Retail toc version :(


### 62

* Updated all tocs to latest


### 61

* Fix issue related to API changes


### 60

* Moved from Beta to Release
* Ready for Dragonflight (v10.0.0)


### 59_Beta

* Added support for Wrath
* Added support for multi-toc
* Added lib to repo and removed from curse auto-build
* Changed versioning scheme: git tags will now only contain an incremental version number, with an optional _Beta suffix


### 1.13.7_2021.05.12 / 2.5.1_2021.05.12

* Update Classic toc version
* Preparation for TBC


### 9.0.5_2021.03.10 / 1.13.6_2021.03.10

+ Add settings to change anchor point of the buff and debuff frames
* Rewrite of the core
* Rewrite of the config panel
* Fix small issue with weapon buff duration and cooldown
* Various fixes and improvements


### 9.0.2_2021.02.23_Beta / 1.13.6_2021.02.23_Beta

* Fix small issue with weapon buff duration and cooldown
* Fix issue with showsecond setting


### 9.0.2_2021.02.19_Beta / 1.13.6_2021.02.19_Beta

+ Add settings to change anchor point
* Rewrite of the core
* Rewrite of the config panel


### 9.0.2_2021.01.06 / 1.13.6_2021.01.06

* Fix buff frame position not properly updating when special class resource bar is active


### 9.0.1_2020.10.14 / 1.13.5_2020.10.14

* Update for Shadowlands API changes (backdrop)


### 8.3.7_2020.08.07 / 1.13.5_2020.08.07

* Fix issue with native cooldown / OmniCC


### 8.2.0_2019.09.15 - September 15, 2019 by Leliel

* Big optimization pass
* Few bug fixes
* Some code cleanup


### 8.2.0_2019.09.04_beta - September 04, 2019 by Leliel
